[TASK] Ignore relevant web files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ vendor/
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
 
-
+/web/index.php
+/web/typo3
+/web/typo3temp
