[TASK] Add contents to example env file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-DATABASE_URL=mysql://user:password@host/database
+DATABASE_URL=mysql://user:password@host:3306/database
+TYPO3_SYS_ENCRYPTIONKEY=addMeSome
